common/app/assets/stylesheets/module/_article.scss
.article-zone {
    padding: 13px 0 14px;
    margin-left: $gutter;
    margin-right: $gutter;
    font-weight: bolder;
    line-height: 1;
    border-bottom: 1px solid $mushroom;

    @media (min-width: $tablet) {
        border-top: none;
    }

    .js-popular & {
        border-bottom: none;
    }
}

.article-zone-sub {
    @extend %type-6;
}

.article-head {
    padding: $baseline*3 0 $baseline*4;
}

.article-headline {
    @extend %type-3;
    margin-bottom: $baseline*2;

    @include mq(tablet) {
        font-family: $serifheadline;
        -webkit-font-smoothing: antialiased;
        font-size: 34px;
        font-size: 3.4rem;
        line-height: 42px;
        line-height: 4.2rem;
        margin-bottom: $baseline*5;
    }

    @include mq(desktop) {
        font-size: 40px;
        font-size: 4rem;
        line-height: 48px;
        line-height: 4.8rem;
        margin-bottom: $baseline*6;
    }

    a {
        &:link,
        &:visited,
        &:hover,
        &:active,
        &:focus {
            color: #333;
        }
    }
}

.article-standfirst {
    margin-bottom: 0;
    text-rendering: optimizeLegibility;

    @include mq(tablet) {
        -webkit-font-smoothing: antialiased;
        font-size: 16px;
        font-size: 1.6rem;
        line-height: 24px;
        line-height: 2.4rem;
    }
    @include mq(desktop) {
        font-size: 18px;
        font-size: 1.8rem;
        line-height: 24px;
        line-height: 2.4rem;
    }
}

.bullet {
    font-size: 13px;
    display: inline-block;
    color: #999999;
    margin: $baseline/2 4px 0 0;
}

.bullet:first-of-type {
    margin-top: $baseline;
}

.byline {
    border-top: 1px solid #cccccc;
    border-bottom: 1px solid #cccccc;
    margin-bottom: $baseline*2;
    padding: $baseline 0 $baseline*4 0;
}
.media-primary {
    margin-left: $gutter * -1;
    margin-right: $gutter * -1;
}
.article .main-image {
    margin-bottom: 0;
}
.article-body {

}

.gu-video {
    width: 100%;
    margin-bottom: $baseline*2;
}

video {
    max-width: 100%;
    height: auto;
    @include user-select;
}


/* Layout changes across devices
   ========================================================================== */

@include mq(tablet) {
    .article-body,
    .article-head,
    .main-caption {
        padding-left: 0 !important;
        padding-right: 0 !important;
    }
    .article-head {
        padding-top: $baseline*2;
        padding-bottom: $baseline*2;
    }
    .d-tabs__item--byline,
    .byline {
        font-size: 16px !important;
        font-size: 1.6rem !important;
    }
    .d-tabs__item--byline {
        padding-left: $baseline !important;
    }
    .d-tabs,
    .byline,
    .player,
    .media-primary {
        margin-left: 0 !important;
        margin-right: 0 !important;
    }
    @media (max-height: 768px) { // Decided with Chris, to refine with real world usage examples
        .media-primary {
            float: left;
            width: gs-span(4);
            margin-right: $gutter;
        }
        .media-primary--comments-on {
            display: none;
        }
        .byline,
        .d-tabs {
            display: table-cell;
            width: 100000px;
            max-width: 100%;
        }
        .d-tabs__item--byline.d-tabs__item--is-active {
            padding-left: 0 !important;
        }
        .byline {
            margin-bottom: 0 !important;

            + .article__container {
                padding-top: $baseline*3;
            }
        }
    }
}

